# vision_analysis_pro

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  tasks.md
.github/: copilot-instructions.md
.github/prompts/: debug-failure.prompt.md  implement-change.prompt.md  plan-visionAnalysisPro.prompt.md  repo-health-check.prompt.md
.github/workflows/: ci.yml
config/: edge_agent.example.yaml  prometheus_alert_rules.example.yml
config/monitoring/prometheus/: prometheus.yml
data/: README.md  data.yaml
data/samples/: README.md
docs/: README.md  annotation_guidelines.md  benchmark-report.md  customer-remote-demo.md  demo.md  deployment.md  dev-log-2025-12-07.md  development-plan.md  e2e-test-results.md  field-data-intake-and-review.md  hardware-bundle.md  model-profile-status.md  multiclass-tower-defect-prototype.md  progress.md  stage-a-yolo-baseline-v0.1.md  stage-b-model-comparison.md  stage-b-pilot-data.md
examples/: demo_request.py  run_edge_agent.py
models/: .gitkeep
runs/train/exp/: args.yaml  results.csv
scripts/: auto_label_onnx.py  benchmark.py  bootstrap_trial.sh  download_hf_crack_model.py  evaluate.py  export_onnx.py  extract_keyframes.py  generate_test_data.py  prepare_multiclass_prototype_inbox.py  prepare_multiclass_tower_dataset.py  prepare_public_surrogate_crack_dataset.py  prepare_stage_a_crack_dataset.py  prepare_stage_b_pilot_dataset.py  smoke_multiclass_tower_inference.py  train.py  validate_data.py  validate_pilot_inbox.py
src/vision_analysis_pro/: __init__.py  categories.py  logging_utils.py  settings.py
src/vision_analysis_pro/core/: __init__.py  crack_yolo_dataset.py
src/vision_analysis_pro/edge_agent/: __init__.py  agent.py  config.py  models.py
src/vision_analysis_pro/web/: __init__.py
tests/: conftest.py  test_api_inference.py  test_categories.py  test_deployment_config.py  test_e2e_integration.py  test_edge_agent.py  test_edge_agent_reporter.py  test_edge_cases.py  test_inference.py  test_keyframes.py  test_logging_utils.py  test_onnx_engine.py  test_prepare_multiclass_prototype_inbox.py  test_prepare_multiclass_tower_dataset.py  test_prepare_public_surrogate_dataset.py  test_prepare_stage_a_dataset.py  test_prepare_stage_b_dataset.py  test_reporting.py  test_smoke_multiclass_tower_inference.py  test_stub_engine.py  test_training.py  test_validate_pilot_inbox.py  test_visualization.py  test_yolo_engine.py
web/: .prettierrc  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/e2e/: app.spec.ts
web/src/: App.vue  main.ts  router.ts  style.css
web/src/components/: AlertSummaryCard.vue  ImageUpload.vue  (+23 more)
(+37 files in other folders)
