[project]
name = "vision-analysis-pro"
version = "0.1.0"
description = "工程基础设施图像识别智能运维系统 - 基于 YOLO 的无人机巡检解决方案"
readme = "README.md"
authors = [
    { name = "Liguo Ma", email = "maliguo@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.0.0",
    "transformers>=4.44.0",
    "huggingface_hub>=0.34.0",
    "timm>=1.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.12.0",
    "onnxruntime>=1.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
edge-agent = "vision_analysis_pro.edge_agent.agent:main"
api-server = "vision_analysis_pro.web.api.main:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
